--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "MisticaCL",
   "version": "0.0.1",
   "private": true,
+  "main": "src/utils/index.ts",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -15,7 +16,6 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-community/slider": "^4.3.3",
     "react": "18.2.0",
