--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.4",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "^14.1.0",
-    "react-native-web": "^0.18.10"
+    "react-native-web": "^0.18.10",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
